--- a/src/components/RankInfo/RankInfo.module.css
+++ b/src/components/RankInfo/RankInfo.module.css
@@ -1,7 +1,7 @@
 .container {
     display: flex;
     justify-content: center;
-    padding: 3rem;
+    padding-bottom: 2rem;
     color: white;
 }
 
